opam-version: "2.0"
maintainer: "Lucas Pluvinage <lucas.pluvinage@gmail.com>"
authors: [ "Lucas Pluvinage <lucas.pluvinage@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/mirage/mirage-websocket"
bug-reports: "https://github.com/mirage/mirage-websocket/issues"
dev-repo: "git+https://github.com/mirage/mirage-socket.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "mirage-http"
  "mirage-channel-lwt"
]
synopsis:
  "Websocket implementation for MirageOS"
name: "mirage-socket"
version: "1.0.0"
